--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <string name="add_to_playlist">Add To Playlist</string>
     <string name="hello">Playing a BEEP</string>
     <string name="app_name">DroidSound</string>
 </resources>
