--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,6 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="add_to_playlist">Add To Playlist</string>
-    <string name="hello">Playing a BEEP</string>
-    <string name="app_name">DroidSound</string>
+<string name="add_to_playlist">Add To Playlist</string>
+<string name="app_name">DroidSound</string>
+<string name="mod_dl_text">Modules goes into the 'MODS' directory on your sdcard, but it seems you don't have any. Do you want to donload a few (~100KB) to get you going?</string>
+<string name="about_text">
+DroidSound vPRE2 by Sasq 2009
+\nUsing:
+\nmodplug
+\nhttp://modplug-xmms.sourceforge.net/
+\nTinySid
+\nhttp://www.rsinsch.de/?id=7298b
+\nGME
+\nhttp://www.fly.net/~ant/libs/audio.html
+</string>
 </resources>
