--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 <string name="add_to_playlist">Add To Playlist</string>
 <string name="app_name">DroidSound</string>
-<string name="mod_dl_text">Modules goes into the 'MODS' directory on your sdcard, but it seems you don't have any. Do you want to donload a few (~100KB) to get you going?</string>
+<string name="mod_dl_text">Modules goes into the \'MODS\' directory on your sdcard, but it seems you don\'t have any. Do you want to donload a few (~100KB) to get you going?</string>
 <string name="about_text">
 DroidSound vPRE3 by Sasq 2009
 \nUsing:
