--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -13,4 +13,5 @@ DroidSound vPRE3 by Sasq 2009
 \nGME
 \nhttp://www.fly.net/~ant/libs/audio.html
 </string>
+<string name="search_hint">Search Song title</string>
 </resources>
