--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -25,4 +25,5 @@
 <string name="scanning">Scanning</string>
 <string name="name">Name</string>
 <string name="composer">Composer</string>
+<string name="upgrade_db">Database format has changed. Old database will be dropped and recreated.</string>
 </resources>
