--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -26,4 +26,8 @@
 <string name="name">Name</string>
 <string name="composer">Composer</string>
 <string name="upgrade_db">Database format has changed. Old database will be dropped and recreated.</string>
+<string name="add_to_plist">Add to playlist</string>
+<string name="create_playlist">Create playlist</string>
+<string name="set_plist">Set current playlist</string>
+<string name="name_playlist">Playlist name</string>
 </resources>
