--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,11 +43,6 @@
 <string name="name_playlist">Playlist name</string>
 <string name="name_folder">Folder name</string>
 <string name="settings">Settings</string>
-<string name="hvsc_downloaded">HVSC is already downloaded.</string>
-<string name="hvsc_downloading">HVSC is currently downloading...</string>
-<string name="csdb_downloaded">CSDb is already downloaded.</string>
-<string name="csdb_downloading">CSDb is currently downloading...</string>
-
 <string name="will_be_downloaded">will be downloaded.</string>
 <string name="is_downloading">is currently downloading...</string>
 <string name="is_downloaded">is already downloaded.</string>
@@ -57,8 +52,12 @@
 <string name="csdb_desc">The CSDb Scene Database (660 KB)</string>
 <string name="testmods_desc">Some test mods</string>
 
+<string name="zip_import_failed">Failed to import zip file.</string>
+
+
 <string name="unpack_examples">Since this looks like the first time you are running Droidsound I have extracted some example
-music for you.\n\nIf you do not want it, simply long click \'Examples\' and select Delete.</string>
+music for you.\n\nIf you do not want it, simply long click \'Examples\' and select Delete.\n\nCheck out \'Download\' in the Settings
+to download more music from the web.</string>
 
 <string-array name="fav_opts">
 	<item>Default subtune</item>
