--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,7 +5,7 @@
 <string name="sdcard_not_found">Could not access sdcard!</string>
 <string name="search_hint">Search title</string>
 <string name="scan_db">Rescan database</string>
-<string name="about_droidsound">"Droidsound v1.0\nBy sasq64@gmail.com"</string>
+<string name="about_droidsound">"By sasq64@gmail.com"</string>
 <string name="recreate_confirm">This will recreate the entire database. It may take a long time. Are you absolutely sure?</string>
 <string-array name="scan_opts">
     <item>Full</item>
@@ -53,6 +53,7 @@
 <string name="testmods_desc">Some test mods</string>
 
 <string name="zip_import_failed">Failed to import zip file.</string>
+<string name="zip_import_replace">Will not replace existing zip file. Remove it first.</string>
 
 
 <string name="unpack_examples">Since this looks like the first time you are running Droidsound I have extracted some example
