--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -54,7 +54,7 @@
 
 <string name="zip_import_failed">Failed to import zip file.</string>
 <string name="zip_import_replace">Will not replace existing zip file. Remove it first.</string>
-
+<string name="ask_speech">You do not have speech installed - install it from Market now?</string>
 <string name="notification">Droidsound playing</string>
 
 <string name="unpack_examples">Since this looks like the first time you are running Droidsound I have extracted some example
