HTTPSource & streaming close to finished.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -44,6 +44,7 @@
 <string name="set_plist">Set current playlist</string>
 <string name="name_playlist">Playlist name</string>
 <string name="name_folder">Folder name</string>
+<string name="name_link">Link name (http://)</string>
 <string name="settings">Settings</string>
 <string name="will_be_downloaded">will be downloaded.</string>
 <string name="is_downloading">is currently downloading...</string>
@@ -73,6 +74,7 @@ to download more music from the web.</string>
 <string-array name="new_opts">
 	<item>Folder</item>
 	<item>Playlist</item>
+	<item>HTTP Link</item>
 </string-array>
 
 <string-array name="indexing_opts">
