--- a/jni/VICEPlugin/README
+++ b/jni/VICEPlugin/README
@@ -1,5 +1,5 @@
-The vice directory contains the untouched VICE source file. Current revision of
-the copy is 23387.
+The vice directory contains the untouched VICE source files. Current revision of
+the copy is 23402.
 
 The android directory contains the android platform support.
 
