--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,12 +21,13 @@
 <string name="del_dir">Delete</string>
 <string name="del_file">Delete</string>
 <string name="del_plist">Delete</string>
-<string name="make_wav">Set Ringtone</string>
+<string name="make_wav">Create Ringtone</string>
 <string name="do_del_plist">Really delete playlist?</string>
 <string name="do_del_dir">Really delete directory?</string>
 <string name="do_del_file">Really delete file?</string>
 <string name="do_make_wav">Really Set as Ringtone?</string>
 <string name="ringtone_set">New ringtone set</string>
+<string name="ringtone_created">New ringtone created</string>
 <string name="rescan">Rescan</string>
 <string name="abort_scan">Abort scan</string>
 <string name="about">About</string>
