Removed some unusued files

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -63,6 +63,10 @@
 <string name="ask_speech">You do not have speech installed - install it from Market now?</string>
 <string name="notification">Droidsound playing</string>
 
+<string name="sort_name">Sorting on Title</string>
+<string name="sort_author">Sorting on Composer</string>
+<string name="sort_date">Sorting on Date</string>
+
 <string name="unpack_examples">Since this looks like the first time you are running Droidsound I have extracted some example
 music for you.\n\nIf you do not want it, simply long click \'Examples\' and select Delete.\n\nAlso check out \'Download\' in the Settings
 to download more music from the web.</string>
