Move back to unbuffered I/O.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -141,6 +141,7 @@ to download more music from the web.</string>
 <item>8580</item>
 <item>6581 (forced)</item>
 <item>8580 (forced)</item>
+<item>8580 + digiboost</item>
 </string-array>
 
 <string-array name="videomode_vals">
