--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -50,7 +50,7 @@
 <string name="name_link">Link name (http://)</string>
 <string name="settings">Settings</string>
 <string name="will_be_downloaded">will be downloaded.</string>
-<string name="is_downloading">is currently downloading...</string>
+<string name="is_downloading">is currently downloading…</string>
 <string name="is_downloaded">is already downloaded.</string>
 <string name="is_queued">is queued for downloading.</string>
 
