--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,59 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-<string name="app_name">Droidsound</string>
-<string name="create_moddir_failed">Could not create MODS directory on sdcard!</string>
-<string name="sdcard_not_found">Could not access sdcard!</string>
-<string name="search_hint">Search title</string>
+<string name="app_name">DroidSound</string>
+<string name="collection_title">Collection</string>
+<string name="playing_title">Currently playing</string>
 <string name="scan_db">Rescan database</string>
 <string-array name="scan_opts">
     <item>Full</item>
 </string-array>
-<string name="go_to_dir">Go to directory</string>
-<string name="cut">Cut</string>
-<string name="paste">Paste</string>
-<string name="remove_all">Remove all</string>
-<string name="do_remove_all">Really clear playlist?</string>
-<string name="del_dir">Delete</string>
-<string name="del_file">Delete</string>
-<string name="del_plist">Delete</string>
-<string name="make_wav">Create Ringtone</string>
-<string name="do_del_plist">Really delete playlist?</string>
-<string name="do_del_dir">Really delete directory?</string>
-<string name="do_del_file">Really delete file?</string>
-<string name="ringtone_set">New ringtone set</string>
-<string name="ringtone_created">New ringtone created</string>
-<string name="new_">New</string>
-<string name="quit">Quit</string>
-<string name="info">Info</string>
-<string name="add_to_plist">Add to \'[playlist]\'</string>
-<string name="set_plist">Set current playlist</string>
-<string name="name_playlist">Playlist name</string>
-<string name="name_folder">Folder name</string>
 <string name="settings">Settings</string>
-
-<string name="zip_import_failed">Failed to import zip file.</string>
-<string name="zip_import_replace">Will not replace existing zip file. Remove it first.</string>
-<string name="notification">Droidsound playing</string>
-
-<string name="sort_name">Sorting on Title</string>
-<string name="sort_author">Sorting on Composer</string>
-<string name="sort_date">Sorting on Date</string>
-
-<string name="unpack_examples">Since this looks like the first time you are running Droidsound I have extracted some example
-music for you.\n\nIf you do not want it, simply long click \'Examples\' and select Delete.\n\nAlso check out \'Download\' in the Settings
-to download more music from the web.</string>
-
-<string-array name="fav_opts">
-	<item>Default subtune</item>
-	<item>Current subtune</item>
-	<item>All subtunes</item>
-</string-array>
-
-
-<string-array name="new_opts">
-	<item>Folder</item>
-	<item>Playlist</item>
-</string-array>
 
 <string-array name="panning_opts">
 	<item>0 % (mono)</item>
@@ -61,14 +15,6 @@ to download more music from the web.</string>
 	<item>50 %</item>
 	<item>75 %</item>
 	<item>100 % (stereo)</item>
-</string-array>
-
-
-<string-array name="buffer_opts">
-	<item>Short</item>
-	<item>Medium</item>
-	<item>Long</item>
-	<item>Very long</item>
 </string-array>
 
 <string-array name="videomode_opts">
@@ -128,4 +74,5 @@ to download more music from the web.</string>
 <item>2</item>
 <item>3</item>
 </string-array>
+<string name="icon">Icon</string>
 </resources>
