Make some feeble stabs towards music visualization
- Showing FFT from AudioEffect's Visualizer. In all its 8-bit
  glory.
- Try out cepstrum analyzing but  that shit doesn't seem to
  work half as well as I hoped.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,8 @@
 <resources>
 <string name="app_name">DroidSound</string>
 <string name="collection_title">Collection</string>
-<string name="playing_title">Currently playing</string>
+<string name="playing_title">Playback</string>
+<string name="visualization_title">Visualization</string>
 <string name="scan_db">Rescan database</string>
 <string-array name="scan_opts">
     <item>Full</item>
