Rescan single dir or zip file

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -29,6 +29,7 @@
 <string name="ringtone_set">New ringtone set</string>
 <string name="ringtone_created">New ringtone created</string>
 <string name="rescan">Rescan</string>
+<string name="scan_dir">Rescan</string>
 <string name="abort_scan">Abort scan</string>
 <string name="about">About</string>
 <string name="new_">New</string>
