Changed layouts to work better in landscape

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -68,6 +68,11 @@
 <string name="sort_author">Sorting on Composer</string>
 <string name="sort_date">Sorting on Date</string>
 
+<string name="stop">STOP</string>
+
+<string name="player_crash">The player stopped unexpectedly. This usually means that a plugin crashed because it couldn\'t handle a song.</string>
+<string name="could_not_play">The song could not be played by any available plugin.</string>
+
 <string name="unpack_examples">Since this looks like the first time you are running this version of Droidsound I have extracted some example
 music for you.\n\nIf you do not want it, simply long click \'Examples\' and select Delete.\n\nAlso check out \'Download\' in the Settings
 to download more music from the web.</string>
