--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -104,6 +104,13 @@ to download more music from the web.</string>
 	<item>Full Stereo</item>
 </string-array>
 
+<string-array name="panning_vals">
+	<item>0</item>
+	<item>1</item>
+	<item>2</item>
+	<item>3</item>
+	<item>4</item>
+</string-array>
 
 <string-array name="buffer_opts">
 	<item>Short</item>
