--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -34,15 +34,11 @@
 <string name="about">About</string>
 <string name="new_">New</string>
 <string name="quit">Quit</string>
-<string name="database_cleared">Database cleared</string>
-<string name="clearing_database">Clearing database</string>
-<string name="database_busy">Database busy!</string>
 <string name="scanning">Scanning</string>
 <string name="title">Title</string>
 <string name="info">Info</string>
 <string name="composer">Composer</string>
 <string name="copyright">Copyright</string>
-<string name="upgrade_db">Database format has changed. Old database will be dropped and recreated.</string>
 <string name="add_to_plist">Add to \'[playlist]\'</string>
 <string name="create_playlist">Create playlist</string>
 <string name="set_plist">Set current playlist</string>
@@ -50,15 +46,27 @@
 <string name="name_folder">Folder name</string>
 <string name="name_link">Link name (http://)</string>
 <string name="settings">Settings</string>
+
+<string name="next">Next</string>
+<string name="prev">Previous</string>
+<string name="stop">Stop</string>
+<string name="play">Play</string>
+
+<!-- 
+<string name="hvsc_desc">The High Voltage Sid Collection (230 MB)</string>
+<string name="csdb_desc">The CSDb Scene Database (660 KB)</string>
+<string name="testmods_desc">Some test mods</string>
+<string name="stop">STOP</string>
 <string name="will_be_downloaded">will be downloaded.</string>
 <string name="is_downloading">is currently downloading…</string>
 <string name="is_downloaded">is already downloaded.</string>
 <string name="is_queued">is queued for downloading.</string>
-
-<string name="hvsc_desc">The High Voltage Sid Collection (230 MB)</string>
-<string name="csdb_desc">The CSDb Scene Database (660 KB)</string>
-<string name="testmods_desc">Some test mods</string>
-
+<string name="upgrade_db">Database format has changed. Old database will be dropped and recreated.</string>
+<string name="database_cleared">Database cleared</string>
+<string name="clearing_database">Clearing database</string>
+<string name="database_busy">Database busy!</string>
+ -->
+ 
 <string name="zip_import_failed">Failed to import zip file.</string>
 <string name="zip_import_replace">Will not replace existing zip file. Remove it first.</string>
 <string name="ask_speech">You do not have speech installed - install it from Market now?</string>
@@ -68,7 +76,6 @@
 <string name="sort_author">Sorting on Composer</string>
 <string name="sort_date">Sorting on Date</string>
 
-<string name="stop">STOP</string>
 
 <string name="player_crash">The player stopped unexpectedly. This usually means that a plugin crashed because it couldn\'t handle a song.</string>
 <string name="could_not_play">The song could not be played by any available plugin.</string>
