--- a/TODO
+++ b/TODO
@@ -1,9 +1,3 @@
 
-METADATA table for Rating, Last played etc
-
-DUMP TO WAV for custom ringsignals
-
+METADATA table for Rating, Last played etc. Especially handy for podcasts/audiobooks
 PARSE STIL INFO for sid songs
-
-STREAM OGG using Temor ?
-
