Fixed crash bugs in Vice and PSX players

--- a/TODO
+++ b/TODO
@@ -27,3 +27,15 @@ SPEECH RECOGNITION
 PLAY ANYTHING [BY <author>]
 PLAY ANYTHING BY [AUTHOR]
 PLAY <song> [BY <author>]
+
+
+
+DataSource
+
+* Shows up with Title in GUI
+* Browse
+* Search
+
+
+
+
